<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_community_ask">Ask the community</string>
    <string name="dialog_community_continue">Continue</string>
    <string name="dialog_community_message">Get in touch with the AIDE developer community</string>
    <string name="dialog_community_more">More…</string>
    <string name="dialog_community_rate">Rate</string>
    <string name="dialog_community_title">Community</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_yes">Yes</string>
    <string name="trainer_skip_lesson">Skip lesson</string>
    <string name="ui_design_run">Run</string>
    <string name="ui_design_view">View</string>
    <string name="editui_design_edit">Edit</string>
    <string name="ui_design_undo">Undo</string>
    <string name="ui_design_redo">Redo</string>
    <string name="ui_design_paste_xml">Paste XML</string>
    <string name="ui_design_copy_xml">Copy XML</string>
    <string name="ui_design_share_xml">Share XML</string>
    <string name="add_">Add…</string>
    <string name="delete_layout">\"Delete Layout \"</string>
    <string name="really_delete_this_layout">Really delete this layout?</string>
    <string name="new_layout">New Layout</string>
    <string name="file_name_">File name:</string>
    <string name="new_layout_">New layout…</string>
    <string name="can_not_view_the_layout">\"Can not view the layout. \"</string>
    <string name="no_views_have_been_added">No views have been added. Tap to add views.</string>
    <string name="no_views_hava_been_added">No views have been added.</string>
    <string name="group_">\"Group \"</string>
    <string name="item_">\"Item \"</string>
    <string name="parent_view_">Parent View…</string>
    <string name="source_code_">Source code…</string>
    <string name="add_inside_">Add inside…</string>
    <string name="add_inside">\"Add inside \"</string>
    <string name="add_above_">Add above…</string>
    <string name="add_above">\"Add above \"</string>
    <string name="add_below_">Add below…</string>
    <string name="add_below">\"Add below \"</string>
    <string name="add_before_">Add before…</string>
    <string name="add_before">\"Add before \"</string>
    <string name="add_behind_">Add behind…</string>
    <string name="add_behind">\"Add behind \"</string>
    <string name="surround_with_">Surround with…</string>
    <string name="surround">\"Surround \"</string>
    <string name="with_">\" with…\"</string>
    <string name="delete">Delete</string>
    <string name="choose_name">Choose Name</string>
    <string name="enter_name_for_image">Enter a name for the image</string>
    <string name="view_">View...</string>
    <string name="select_another_view">Select another view</string>
    <string name="view_was_selected_for_attribute">\"View was selected for attribute \"</string>
    <string name="color_">Color...</string>
    <string name="drawable_">Drawable...</string>
    <string name="other_">other...</string>
    <string name="add__">add...</string>
    <string name="fixed_size_">Fixed size...</string>
</resources>
